--- a/src/styles/css/About.css
+++ b/src/styles/css/About.css
@@ -1,14 +1,14 @@
-.hero-container {
+#about-body {
   display: block;
-  background-image: url("../../assets/images/_DSF8179.jpg");
   background-size: cover;
   height: 700px;
   width: 100%;
   z-index: 1000; }
 
-.hero {
-  background: linear-gradient(#fa446234, #ffff0048);
+.about-container {
   display: block;
+  background-size: cover;
+  background-image: url("../../assets/images/_DSF8179.jpg");
   position: relative;
   padding: 4px;
   width: 100%;
@@ -16,12 +16,74 @@
   margin: 0 auto;
   text-align: left;
   font-weight: 700; }
-  .hero p {
-    display: block;
+  .about-container .about-statement {
+    display: hidden;
     position: relative;
-    margin: 0 auto;
     width: 45%;
-    font-weight: 600;
-    font-size: 2rem; }
+    margin: 0 auto;
+    color: #1a1a2018;
+    filter: blur(10px);
+    float: left;
+    transition: 0.4s ease all; }
+  .about-container span:hover {
+    transition: .8s ease all;
+    filter: blur(0px); }
+
+#about-name {
+  font-size: 4.8rem; }
+
+#about-name:hover {
+  font-size: 4.9rem;
+  letter-spacing: -5px;
+  text-shadow: -9px -9px 0px #000000;
+  color: #c48a27; }
+
+#about-traits {
+  font-size: 3.9rem; }
+
+#about-traits:hover {
+  font-size: 4.1rem;
+  letter-spacing: -5px;
+  text-shadow: 6px -5px 0px #000000c9;
+  color: #2f680e; }
+
+#about-location {
+  font-size: 2.9rem;
+  letter-spacing: -3px; }
+
+#about-location:hover {
+  font-size: 3rem;
+  letter-spacing: -4px;
+  text-shadow: 7px 5px 0px #000000;
+  color: #df5329; }
+
+#about-contact {
+  display: block;
+  position: relative;
+  padding: 6px;
+  font-size: 2.5rem;
+  color: #df54290a; }
+
+#about-contact:hover {
+  font-size: 2.9rem;
+  letter-spacing: -2px;
+  text-shadow: -3px 4px 0px #000000;
+  padding: 8px;
+  background-color: #ff5e2dbb;
+  color: #f2f5ff; }
+
+#about-here {
+  font-size: 3rem;
+  letter-spacing: -2px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0);
+  transition: .3s ease-in-out; }
+
+#about-here:hover {
+  display: block;
+  transition: .4s ease all;
+  font-size: 3.1rem;
+  color: #ffeaed;
+  letter-spacing: -3px; }
 
 /*# sourceMappingURL=About.css.map */
