--- a/src/styles/css/About.css
+++ b/src/styles/css/About.css
@@ -1,89 +1,105 @@
 #about-body {
   display: block;
+  position: relative;
+  background-image: url("../../assets/images/_DSF8179.jpg");
   background-size: cover;
-  height: 700px;
-  width: 100%;
-  z-index: 1000; }
+  background-attachment: scroll;
+  background-position: center;
+  height: 800px;
+  width: 100%; }
 
 .about-container {
   display: block;
   background-size: cover;
-  background-image: url("../../assets/images/_DSF8179.jpg");
   position: relative;
-  padding: 4px;
-  width: 100%;
-  height: 700px;
+  background: #e53f0c61;
+  outline: 1px solid #0000005b;
   margin: 0 auto;
+  padding: 20px;
+  width: 60%;
+  height: 400px;
+  overflow: scroll;
   text-align: left;
-  font-weight: 700; }
+  font-weight: 700;
+  top: 40px;
+  transition: .3s ease all; }
   .about-container .about-statement {
-    display: hidden;
+    display: block;
     position: relative;
-    width: 45%;
-    margin: 0 auto;
-    color: #1a1a2018;
-    filter: blur(10px);
-    float: left;
-    transition: 0.4s ease all; }
-  .about-container span:hover {
-    transition: .8s ease all;
-    filter: blur(0px); }
+    margin: 24px auto;
+    padding: 24px;
+    height: 250px;
+    width: 55%;
+    min-width: 35%;
+    background: #0000005a;
+    color: #ffffff00;
+    filter: blur(15px);
+    transition: .3s ease all; }
+  .about-container .about-statement:hover {
+    transition: .3s ease all;
+    filter: blur(0px);
+    background: #ffffffad;
+    color: #000000ad; }
 
-#about-name {
-  font-size: 4.8rem; }
+.about-container:hover {
+  transition: .3s ease all;
+  outline: 2px solid #ffffff5b;
+  background: #008b8b61; }
 
-#about-name:hover {
-  font-size: 4.9rem;
-  letter-spacing: -5px;
-  text-shadow: -9px -9px 0px #000000;
-  color: #c48a27; }
-
-#about-traits {
-  font-size: 3.9rem; }
-
-#about-traits:hover {
-  font-size: 4.1rem;
-  letter-spacing: -5px;
-  text-shadow: 6px -5px 0px #000000c9;
-  color: #2f680e; }
-
-#about-location {
-  font-size: 2.9rem;
-  letter-spacing: -3px; }
-
-#about-location:hover {
-  font-size: 3rem;
-  letter-spacing: -4px;
-  text-shadow: 7px 5px 0px #000000;
-  color: #df5329; }
-
-#about-contact {
+.about-me {
   display: block;
   position: relative;
+  margin: 0 auto;
   padding: 6px;
+  width: 54%;
+  height: 180px;
+  top: 20px;
+  text-align: center;
+  line-height: 260px;
+  font-size: 7.5rem;
+  letter-spacing: -10px;
+  border-bottom: 20px solid #b2b2b200;
+  font-weight: 800;
+  color: #00000049;
+  transition: .5s ease all; }
+
+.about-me:hover {
+  transition: .5s ease all;
+  letter-spacing: -10.5px;
+  border-bottom: 20px solid #000000ad;
+  color: #000000ad; }
+
+#about-name {
+  letter-spacing: -5px;
+  font-size: 3rem; }
+
+#about-traits {
+  font-size: 2.85rem;
+  letter-spacing: -5px; }
+
+#about-location {
+  font-size: 2.25rem;
+  letter-spacing: -3px; }
+
+#about-contact {
+  position: relative;
   font-size: 2.5rem;
   color: #df54290a; }
 
 #about-contact:hover {
-  font-size: 2.9rem;
-  letter-spacing: -2px;
-  text-shadow: -3px 4px 0px #000000;
-  padding: 8px;
-  background-color: #ff5e2dbb;
-  color: #f2f5ff; }
+  background-color: #fb6537be;
+  color: #f2f5ff;
+  text-shadow: -1px 2px 0px #000000; }
 
 #about-here {
-  font-size: 3rem;
-  letter-spacing: -2px;
+  font-size: 2.5rem;
+  transition: .3s ease-in-out;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0);
-  transition: .3s ease-in-out; }
+  color: #ffffff00;
+  letter-spacing: -3px; }
 
 #about-here:hover {
-  display: block;
-  transition: .4s ease all;
-  font-size: 3.1rem;
-  color: #ffeaed;
-  letter-spacing: -3px; }
+  transition: .3s ease all;
+  color: #ffeaed; }
 
 /*# sourceMappingURL=About.css.map */
