updated entire site

--- a/src/styles/css/About.css
+++ b/src/styles/css/About.css
@@ -12,11 +12,13 @@
   display: block;
   background-size: cover;
   position: relative;
-  background: #e53f0c61;
-  outline: 1px solid #0000005b;
+  background: #d8ffdf23;
+  border: 4px solid #ffffff5b;
+  border-radius: 5px;
   margin: 0 auto;
   padding: 20px;
-  width: 60%;
+  width: 50%;
+  max-width: 600px;
   height: 400px;
   overflow: scroll;
   text-align: left;
@@ -31,6 +33,7 @@
     height: 250px;
     width: 55%;
     min-width: 35%;
+    border-radius: 12px;
     background: #0000005a;
     color: #ffffff00;
     filter: blur(15px);
@@ -43,21 +46,21 @@
 
 .about-container:hover {
   transition: .3s ease all;
-  outline: 2px solid #ffffff5b;
-  background: #008b8b61; }
+  border: 4px solid #ffffff5b;
+  background: #e53f0c61; }
 
 .about-me {
   display: block;
   position: relative;
   margin: 0 auto;
   padding: 6px;
-  width: 54%;
+  width: 41%;
   height: 180px;
   top: 20px;
   text-align: center;
   line-height: 260px;
   font-size: 7.5rem;
-  letter-spacing: -10px;
+  letter-spacing: -12px;
   border-bottom: 20px solid #b2b2b200;
   font-weight: 800;
   color: #00000049;
@@ -65,7 +68,6 @@
 
 .about-me:hover {
   transition: .5s ease all;
-  letter-spacing: -10.5px;
   border-bottom: 20px solid #000000ad;
   color: #000000ad; }
 
@@ -81,25 +83,52 @@
   font-size: 2.25rem;
   letter-spacing: -3px; }
 
+#about-skills {
+  font-size: 2.25rem;
+  letter-spacing: -3px;
+  width: 60%;
+  overflow: auto; }
+  #about-skills i {
+    display: inline-block;
+    position: relative;
+    color: #0000008a;
+    margin: 2px 2px;
+    padding: 1px 8px;
+    font-size: 2.45rem;
+    text-align: center;
+    border-radius: 5px;
+    transition: .2s ease all; }
+  #about-skills i:hover {
+    transition: .2s ease all;
+    color: #000000ad;
+    background: #ffffffad; }
+
+#icon-container {
+  display: block;
+  position: relative;
+  padding-left: 8%;
+  align-content: center; }
+
 #about-contact {
   position: relative;
   font-size: 2.5rem;
   color: #df54290a; }
 
 #about-contact:hover {
-  background-color: #fb6537be;
-  color: #f2f5ff;
-  text-shadow: -1px 2px 0px #000000; }
+  background: #ffffffad;
+  color: #000000ad; }
 
 #about-here {
   font-size: 2.5rem;
-  transition: .3s ease-in-out;
   text-decoration: none;
   color: #ffffff00;
-  letter-spacing: -3px; }
+  border-bottom: 3px solid #00000000;
+  text-shadow: -1px 2px 0px #000000ad;
+  letter-spacing: -3px;
+  transition: .4s ease-in-out; }
 
 #about-here:hover {
-  transition: .3s ease all;
-  color: #ffeaed; }
+  transition: .4s ease all;
+  border-bottom: 3px solid #000000ad; }
 
 /*# sourceMappingURL=About.css.map */
