--- a/src/styles/css/Header.css
+++ b/src/styles/css/Header.css
@@ -7,7 +7,12 @@
   z-index: 1000;
   width: 99%;
   border-bottom: 1.5px solid #2f3f45;
-  padding: 10px; }
+  padding: 10px;
+  transition: .2s ease all; }
+
+.site-header:hover {
+  transition: .2s ease all;
+  border-bottom: 1.5px solid #af7c1d; }
 
 #site-logo {
   display: inline-block;
@@ -47,7 +52,8 @@
   margin: 0 auto;
   float: right; }
   .site-nav .nav-link {
-    transition: all .4s ease-out; }
+    transition: all .4s ease-out;
+    border-radius: 5px; }
   .site-nav ul {
     position: relative;
     width: auto;
