--- a/src/styles/css/Hero.css
+++ b/src/styles/css/Hero.css
@@ -8,9 +8,8 @@
   margin: 0 auto;
   margin-top: 20px;
   padding: 20px;
-  max-width: 100%;
-  height: 650px;
-  max-height: 700px;
+  width: 100%;
+  height: 800px;
   overflow: auto;
   word-wrap: break-word;
   text-align: center;
@@ -43,6 +42,7 @@
   font-size: 7.6rem;
   color: black;
   text-shadow: 3px 5px 3px #212c5754;
-  outline: 5px solid #000000aa; }
+  border: 5px solid #000000aa;
+  border-radius: 5px; }
 
 /*# sourceMappingURL=Hero.css.map */
