--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,6 +1,7 @@
 body {
-  // background: #ff694a;
   background: lightgrey;
+  height:100%;
+  width:100%;
   font-size: 16px;
   font-family: sans-serif;
   margin: 0;
