--- a/src/styles/scss/Hero.scss
+++ b/src/styles/scss/Hero.scss
@@ -8,10 +8,8 @@
   margin: 0 auto;
   margin-top: 20px;
   padding: 20px;
-  max-width: 100%;
-  // min-width: 400px;
-  height:650px;
-  max-height: 700px;
+  width: 100%;
+  height: 800px;
   overflow: auto;
   word-wrap: break-word;
   text-align: center;
@@ -48,7 +46,8 @@
   font-size: 7.6rem;
   color: black;
   text-shadow: 3px 5px 3px #212c5754;
-  outline: 5px solid #000000aa;
+  border: 5px solid #000000aa;
+  border-radius: 5px;
 }
 
 
