updated styles and icons on about page

--- a/src/styles/css/About.css
+++ b/src/styles/css/About.css
@@ -86,6 +86,7 @@
 #about-skills {
   font-size: 2.25rem;
   letter-spacing: -3px;
+  text-align: center;
   width: 60%;
   overflow: auto; }
   #about-skills i {
@@ -93,15 +94,17 @@
     position: relative;
     color: #0000008a;
     margin: 2px 2px;
-    padding: 1px 8px;
+    padding: 2px;
+    padding-left: 4px;
     font-size: 2.45rem;
-    text-align: center;
+    width: 3rem;
+    height: 3rem;
     border-radius: 5px;
     transition: .2s ease all; }
   #about-skills i:hover {
     transition: .2s ease all;
-    color: #000000ad;
-    background: #ffffffad; }
+    background: #0000008a;
+    color: #ffffffad; }
 
 #icon-container {
   display: block;
