--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -95,6 +95,7 @@ body {
 #about-skills {
   font-size: 2.25rem;
   letter-spacing: -3px;
+  text-align: center;
   width: 60%;
   overflow: auto; }
   #about-skills i {
@@ -102,15 +103,17 @@ body {
     position: relative;
     color: #0000008a;
     margin: 2px 2px;
-    padding: 1px 8px;
+    padding: 2px;
+    padding-left: 4px;
     font-size: 2.45rem;
-    text-align: center;
+    width: 3rem;
+    height: 3rem;
     border-radius: 5px;
     transition: .2s ease all; }
   #about-skills i:hover {
     transition: .2s ease all;
-    color: #000000ad;
-    background: #ffffffad; }
+    background: #0000008a;
+    color: #ffffffad; }
 
 #icon-container {
   display: block;
