--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -201,19 +201,36 @@ body {
   position: relative;
   height: 900px; }
 
-.contact-container {
+.contact-header-container {
+  background: #24352f;
   display: block;
-  height: 800px;
   position: relative;
-  background: #1e3b1e; }
+  height: 250px;
+  top: 10px;
+  border-bottom: 2px solid #add8e63f;
+  padding: 4px;
+  transition: .4s ease all; }
+
+.contact-header-container:hover {
+  transition: .4s ease all;
+  background: #17221e;
+  border-bottom: 2px solid #35c7f862;
+  box-shadow: 0px .2px 20px #35c7f862; }
 
 #contact-hwun {
-  display: block;
+  display: inline-block;
+  color: #add8e63f;
+  text-shadow: 0px 0px 1px #35242b;
   position: relative;
-  top: 100px;
-  background: grey;
-  font-size: 5rem;
-  color: #cf8701; }
+  font-size: 7rem;
+  letter-spacing: -14px;
+  top: 3px;
+  transition: .4s ease all; }
+
+#contact-hwun:hover {
+  transition: .4s ease all;
+  color: #35c7f862;
+  text-shadow: -1px 1px 15px #35c7f862; }
 
 .site-header {
   background: #1a1a20;
@@ -404,6 +421,25 @@ a:after {
   transition: .4s ease all;
   color: #35c7f862;
   text-shadow: -1px 1px 15px #35c7f862; }
+
+#proj-header-blurb {
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  width: 25%;
+  bottom: 11rem;
+  font-size: 2.25rem;
+  text-align: left;
+  line-height: 35px;
+  letter-spacing: -5px;
+  font-weight: 800;
+  color: #35242b;
+  transition: .2s ease all; }
+
+#proj-header-blurb:hover {
+  transition: .2s ease all;
+  color: #35c7f862;
+  text-shadow: -2px 2px 30px #35c7f862; }
 
 .blurb-hlder {
   background: #d3d3d30c;
